--- a/q/273875.html
+++ b/q/273875.html
@@ -26,14 +26,14 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>019</td><td>GolfScript</td><td>240703T115536Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273909#273909">Twilight</a></td></tr>
-<tr d-ix="1"><td>041</td><td>Python 3.8 prerelease</td><td>240702T225141Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273878#273878">squarero</a></td></tr>
-<tr d-ix="2"><td>026</td><td>brainfuck</td><td>240702T233900Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273882#273882">noodle p</a></td></tr>
-<tr d-ix="3"><td>012</td><td>J</td><td>240703T190336Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273918#273918">noodle p</a></td></tr>
-<tr d-ix="4"><td>012</td><td>Brachylog</td><td>240704T093923Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273921#273921">Fatalize</a></td></tr>
-<tr d-ix="5"><td>036</td><td>Ruby</td><td>240703T091600Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273902#273902">int 21h </a></td></tr>
-<tr d-ix="6"><td>012</td><td>APL Dyalog Extended</td><td>240702T224208Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273876#273876">Ad&#225;</a></td></tr>
-<tr d-ix="7"><td>054</td><td>C gcc</td><td>240703T211432Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273919#273919">corvus_1</a></td></tr>
+<tr d-ix="0"><td>050</td><td>C gcc</td><td>240703T211432Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273919#273919">corvus_1</a></td></tr>
+<tr d-ix="1"><td>019</td><td>GolfScript</td><td>240703T115536Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273909#273909">Twilight</a></td></tr>
+<tr d-ix="2"><td>041</td><td>Python 3.8 prerelease</td><td>240702T225141Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273878#273878">squarero</a></td></tr>
+<tr d-ix="3"><td>026</td><td>brainfuck</td><td>240702T233900Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273882#273882">noodle p</a></td></tr>
+<tr d-ix="4"><td>012</td><td>J</td><td>240703T190336Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273918#273918">noodle p</a></td></tr>
+<tr d-ix="5"><td>012</td><td>Brachylog</td><td>240704T093923Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273921#273921">Fatalize</a></td></tr>
+<tr d-ix="6"><td>036</td><td>Ruby</td><td>240703T091600Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273902#273902">int 21h </a></td></tr>
+<tr d-ix="7"><td>012</td><td>APL Dyalog Extended</td><td>240702T224208Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273876#273876">Ad&#225;</a></td></tr>
 <tr d-ix="8"><td>3534</td><td>Excel</td><td>240703T040741Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273891#273891">z..</a></td></tr>
 <tr d-ix="9"><td>054</td><td>Julia 1.0</td><td>240703T150526Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273917#273917">Ashlin H</a></td></tr>
 <tr d-ix="10"><td>028</td><td>Perl 5 n</td><td>240703T140300Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273916#273916">Xcali</a></td></tr>
@@ -59,12 +59,19 @@
 <tr d-ix="30"><td>005</td><td>Jelly</td><td>240702T230349Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273880#273880">Jonathan</a></td></tr>
 <tr d-ix="31"><td>003</td><td>Vyxal</td><td>240702T224503Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273877#273877">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="http://www.golfscript.com/golfscript/" rel="nofollow noreferrer">GolfScript</a>, <s>20</s> 19 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <s>54</s> 50 bytes</h1>
+
+<pre class="lang-c prettyprint-override"><code>i;f(s,l){for(i=1;i&lt;l;i*=2)puts(strndup(s+i-1,i));}
+</code></pre>
+<p><a href="https://tio.run/##FY1LDoMgFAD3nuLFFVhNxHaHHsai6GsRLQ/6M56d0u1kMqOqSakYUWpGpeG7Xh3DTkhsjcSia/gWPDHyzg5hY3TCSpTIuTwiWg9LjxYYhz0DUHPvoCDoIO@vahj1NOPtbha7bg9HPjxf78@3Fs35ksuk/38pa0bLKPUScaMPzkItsyP@AA" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
+<p>May have a memory leak or two.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="http://www.golfscript.com/golfscript/" rel="nofollow noreferrer">GolfScript</a>, <s>20</s> 19 bytes</h1>
 <pre><code>1/.,,{).)&amp;!n*}%]zip
 </code></pre>
 <p><a href="https://tio.run/##S8/PSStOLsosKPn/31BfT0enWlNPU00xT6tWNbYqs@D//8Sk5JTUtPSMzKzsnNy8fAA" rel="nofollow noreferrer" title="GolfScript – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 66 </s> <s> 65 </s> <s> 50 </s> <s> 49 </s> <s> 46 </s> <s> 42 </s> 41 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 66 </s> <s> 65 </s> <s> 50 </s> <s> 49 </s> <s> 46 </s> <s> 42 </s> 41 bytes</h1>
 <p><em>-1 byte by doing away with</em> <code>int.bit_length()</code><em>.</em><br />
 <em>-15 bytes: recursion for the win!</em><br />
 <em>-1 byte by using list unpacking instead of</em> <code>list()</code><em>.</em><br />
@@ -76,7 +83,7 @@
 </code></pre>
 <p><a href="https://tio.run/##BcE5DoAgEADAr9BxhEZtDAkvIRQgIigsxFCsr8eZ/o3UYNv7O2fUxVUfHEEJelFIHASDRoGVIjI0oKxcBXA7@5thsMio80c445Xy/ZQKjXI@fw" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/TryItOnline/brainfuck" rel="nofollow noreferrer">brainfuck</a>, 26 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/TryItOnline/brainfuck" rel="nofollow noreferrer">brainfuck</a>, 26 bytes</h1>
 <pre><code>+[[-&gt;,.&gt;++&lt;&lt;]+++++++++.&gt;&gt;]
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70yqSgxMy-tNDl7wYKlpSVpuha7tKOjde109Oy0tW1sYrVhQM_OLhaiAKpuwfrEpOSU1LT0jMys7JzcvHyIMAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -95,7 +102,7 @@
            again
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, <s>16</s> 12 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, <s>16</s> 12 bytes</h1>
 <pre><code>&lt;/.~2&lt;.@^.#\
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70wa8FOJT31NAVbKwV1BR0FAwUrINbVU3AO8nFbWlqSpmuxxkZfr87IRs8hTk85BiJ0M1GTKzU5I18hTUE9MSlZHZmTkpqWjiGQkZmVnZObl49ToqCwqLiktKy8orLKwNDI2EQdYtGCBRAaAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -109,7 +116,7 @@
               NB.   (Literally: length of prefixes)
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, 12 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, 12 bytes</h1>
 <pre><code>{Ẹg|ḍgᵗ↰ʰc}b
 </code></pre>
 <p><a href="https://tio.run/##ATYAyf9icmFjaHlsb2cy//974bq4Z3zhuI1n4bWX4oawyrBjfWL//yJhYmNkZWZnaGlqa2xtbm8i/1o" rel="nofollow noreferrer" title="Brachylog – Try It Online">Try it online!</a></p>
@@ -127,7 +134,7 @@
            b    Remove the first element which is the empty string at the end
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>55</s> <s>53</s>  <s>47</s> <a href="https://ato.pxeger.com/run?1=m72kqDSpcsGCpaUlaboWN3XTbHXtinXKbKNjdRJtDauLFezTooujE_X0YnXKbGyKo_X09BKBUlpGsVZltRBNuwpKS4oV0qKVEpOSU1LT0jMys7JzcvPylWK5IApgpgMA" rel="nofollow noreferrer"><s>45</s></a> 36 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>55</s> <s>53</s>  <s>47</s> <a href="https://ato.pxeger.com/run?1=m72kqDSpcsGCpaUlaboWN3XTbHXtinXKbKNjdRJtDauLFezTooujE_X0YnXKbGyKo_X09BKBUlpGsVZltRBNuwpKS4oV0qKVEpOSU1LT0jMys7JzcvPylWK5IApgpgMA" rel="nofollow noreferrer"><s>45</s></a> 36 bytes</h1>
 <ul>
 <li>-2 bytes thanks to <a href="https://codegolf.stackexchange.com/users/92901/dingus">Dingus</a></li>
 <li>-9 bytes thanks to <a href="https://codegolf.stackexchange.com/users/18535/g-b">G B</a></li>
@@ -138,7 +145,7 @@
 <p>@OP just to let you know, the easy tasks are welcome! :)</p>
 <p>A recursive function with 2 variables: the original string and the counter. The function chops a string piece, adds it to the unnamed output vector and updates the counter until the string is empty.</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/abrudz/dyalog-apl-extended" rel="nofollow noreferrer">APL (Dyalog Extended)</a>, <s>16</s> 12 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/abrudz/dyalog-apl-extended" rel="nofollow noreferrer">APL (Dyalog Extended)</a>, <s>16</s> 12 bytes</h1>
 
 <p>Anonymous tacit prefix function, port of <a href="https://codegolf.stackexchange.com/a/273885/43319">Bubbler's J</a>.</p>
 <pre class="lang-apl prettyprint-override"><code>⊢⊂⍨1=1⊥2⊤⍳∘≢
@@ -163,12 +170,6 @@
 <p><code>1↑¨⍨</code> prefixes of 1 (padding with trailing 0s) of lengths…</p>
 <p><code>2*</code> two to the power of…</p>
 <p><code>⍳∘≢</code> the indices (0…n−1) of the length of the argument</p>
-</div>
-<div id="pu7" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 54 bytes</h1>
-
-<pre class="lang-c prettyprint-override"><code>i;f(s,l){for(i=1;i&lt;l;puts(strndup(s+i/2-1,i/2)))i*=2;}
-</code></pre>
-<p><a href="https://tio.run/##FY07DoMwEAV7TrGi8hJQgKRzOAwxv02MAa@dH@LsDjSvGI3mqaxXKgSSneBU49pNVlBVSLppOXvHgp01jZ8Fn@hcZkW6LyJSUpVyC2QcjDUZEAhrBKCG2kLCUEFc31XTdv1Aj6cezTQvlp1/vT/fX16Ul2ssd/343Pu6NYIRD2Jb562BXEZb@AM" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu8" class="pu"><h1>Excel, <del>35</del> 34 bytes</h1>
 <p><em><sup>-1 byte thanks to <a href="https://codegolf.stackexchange.com/users/119296/doubleunary">@doubleunary</a></sup></em></p>
