--- a/q/12028.html
+++ b/q/12028.html
@@ -26,20 +26,28 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>079</td><td>R</td><td>240704T173403Z</td><td><a href="https://codegolf.stackexchange.com/questions/12028/flipping-pancakes/273925#273925">int 21h </a></td></tr>
-<tr d-ix="1"><td>066</td><td>Perl 5.10 or higher</td><td>180202T073556Z</td><td><a href="https://codegolf.stackexchange.com/questions/12028/flipping-pancakes/154628#154628">Ton Hosp</a></td></tr>
-<tr d-ix="2"><td>071</td><td>Haskell</td><td>180202T091131Z</td><td><a href="https://codegolf.stackexchange.com/questions/12028/flipping-pancakes/154630#154630">Laikoni</a></td></tr>
-<tr d-ix="3"><td>229</td><td>C#</td><td>130815T185939Z</td><td><a href="https://codegolf.stackexchange.com/questions/12028/flipping-pancakes/12310#12310">user8865</a></td></tr>
-<tr d-ix="4"><td>3421</td><td>GolfScript</td><td>130711T061217Z</td><td><a href="https://codegolf.stackexchange.com/questions/12028/flipping-pancakes/12034#12034">Volatili</a></td></tr>
-<tr d-ix="5"><td>090</td><td>Python</td><td>130711T073557Z</td><td><a href="https://codegolf.stackexchange.com/questions/12028/flipping-pancakes/12037#12037">Keith Ra</a></td></tr>
-<tr d-ix="6"><td>100</td><td>Perl</td><td>130711T062045Z</td><td><a href="https://codegolf.stackexchange.com/questions/12028/flipping-pancakes/12035#12035">breadbox</a></td></tr>
-<tr d-ix="7"><td>029</td><td>GolfScript</td><td>130711T081519Z</td><td><a href="https://codegolf.stackexchange.com/questions/12028/flipping-pancakes/12038#12038">Howard</a></td></tr>
-<tr d-ix="8"><td>079</td><td>Ruby 1.9</td><td>130711T011201Z</td><td><a href="https://codegolf.stackexchange.com/questions/12028/flipping-pancakes/12029#12029">Paul Pre</a></td></tr>
-<tr d-ix="9"><td>282</td><td>Python</td><td>130711T022835Z</td><td><a href="https://codegolf.stackexchange.com/questions/12028/flipping-pancakes/12031#12031">WendiKid</a></td></tr>
-<tr d-ix="10"><td>120</td><td>Python2</td><td>130711T071450Z</td><td><a href="https://codegolf.stackexchange.com/questions/12028/flipping-pancakes/12036#12036">Bakuriu</a></td></tr>
-<tr d-ix="11"><td>254</td><td>Python 2</td><td>130711T053319Z</td><td><a href="https://codegolf.stackexchange.com/questions/12028/flipping-pancakes/12033#12033">miles</a></td></tr>
+<tr d-ix="0"><td>074</td><td>JavaScript Node.js</td><td>240704T192740Z</td><td><a href="https://codegolf.stackexchange.com/questions/12028/flipping-pancakes/273926#273926">l4m2</a></td></tr>
+<tr d-ix="1"><td>079</td><td>R</td><td>240704T173403Z</td><td><a href="https://codegolf.stackexchange.com/questions/12028/flipping-pancakes/273925#273925">int 21h </a></td></tr>
+<tr d-ix="2"><td>066</td><td>Perl 5.10 or higher</td><td>180202T073556Z</td><td><a href="https://codegolf.stackexchange.com/questions/12028/flipping-pancakes/154628#154628">Ton Hosp</a></td></tr>
+<tr d-ix="3"><td>071</td><td>Haskell</td><td>180202T091131Z</td><td><a href="https://codegolf.stackexchange.com/questions/12028/flipping-pancakes/154630#154630">Laikoni</a></td></tr>
+<tr d-ix="4"><td>229</td><td>C#</td><td>130815T185939Z</td><td><a href="https://codegolf.stackexchange.com/questions/12028/flipping-pancakes/12310#12310">user8865</a></td></tr>
+<tr d-ix="5"><td>3421</td><td>GolfScript</td><td>130711T061217Z</td><td><a href="https://codegolf.stackexchange.com/questions/12028/flipping-pancakes/12034#12034">Volatili</a></td></tr>
+<tr d-ix="6"><td>090</td><td>Python</td><td>130711T073557Z</td><td><a href="https://codegolf.stackexchange.com/questions/12028/flipping-pancakes/12037#12037">Keith Ra</a></td></tr>
+<tr d-ix="7"><td>100</td><td>Perl</td><td>130711T062045Z</td><td><a href="https://codegolf.stackexchange.com/questions/12028/flipping-pancakes/12035#12035">breadbox</a></td></tr>
+<tr d-ix="8"><td>029</td><td>GolfScript</td><td>130711T081519Z</td><td><a href="https://codegolf.stackexchange.com/questions/12028/flipping-pancakes/12038#12038">Howard</a></td></tr>
+<tr d-ix="9"><td>079</td><td>Ruby 1.9</td><td>130711T011201Z</td><td><a href="https://codegolf.stackexchange.com/questions/12028/flipping-pancakes/12029#12029">Paul Pre</a></td></tr>
+<tr d-ix="10"><td>282</td><td>Python</td><td>130711T022835Z</td><td><a href="https://codegolf.stackexchange.com/questions/12028/flipping-pancakes/12031#12031">WendiKid</a></td></tr>
+<tr d-ix="11"><td>120</td><td>Python2</td><td>130711T071450Z</td><td><a href="https://codegolf.stackexchange.com/questions/12028/flipping-pancakes/12036#12036">Bakuriu</a></td></tr>
+<tr d-ix="12"><td>254</td><td>Python 2</td><td>130711T053319Z</td><td><a href="https://codegolf.stackexchange.com/questions/12028/flipping-pancakes/12033#12033">miles</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 79 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 74 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>f=x=&gt;(i=0,k=x.find(c=&gt;c&gt;x[++i]))?[i+1,2,i+1,...f(x,x[i-1]=x[i],x[i]=k)]:[]
+</code></pre>
+<p><a href="https://tio.run/##bUxLCoMwEN17iuw6gzFo21Uh9gjdKiELiUlJFCP@CJSe3cZCd53FzPvMe67ZmllNdlyywbd63w0PvATLc9rxwIwdWlC8VGUQaWol4l3YtKBnemzGmIFAg7BZIXk88sCSdyhvQu4V4URc4@@FFjKpIzMgYqaSmBg/EXDEG1IjeSUkjvLD7HvNev@EihKHX/UoqdjcW6Uhpw7ZpDc9zRqQxYBqFvi5DjF5/2s6PdZlXJcT7h8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p>Bubble sort</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 79 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>\(v)for(j in sum(v|1):2){v[1:w]=v[(w=which.max(v)):1];v=rev(v[-1]);cat(w,j,&quot;&quot;)}
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72waMGiNNulpSVpuhY3_WM0yjTT8os0shQy8xSKS3M1ymoMNa2MNKvLog2tymNty6I1ym3LMzKTM_RyEyuAijWtDGOty2yLUss0yqJ1DWM1rZMTSzTKdbJ0lJQ0a6HGtqVpJGuY6ZjqmOgY6hjpGGtCVCnF5ClpcoHkTECiOoYY4mDVQF2maDIg61Bk0TVCJVCNhLhmwQIIDQA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -53,7 +61,7 @@
 </ul>
 <p>Now, the resulting sequence will always have <span class="math-container">\$(n-1)×2\$</span> flips, which is unnecessary long. Some flips could be skipped, like <code>1</code> or two flips of the whole stack - both of them do not change the order of pancakes. The reason why those redundant flips do appear in the output is to have the code as short as possible.</p>
 </div>
-<div id="pu1" class="pu"><h1>Perl 5.10 (or higher), 66 bytes</h1>
+<div id="pu2" class="pu"><h1>Perl 5.10 (or higher), 66 bytes</h1>
 
 <p>Includes <code>+3</code> for <code>-n</code>
 The <code>use 5.10.0</code> to bring the language to level perl 5.10 is considered free</p>
@@ -70,7 +78,7 @@ $'&gt;=$&amp;or$.=s/(\S+) \G(\S+)/$2 $1/*say"$. 2 $."while$.++,/\S+ /g
 
 <p>Sorts the list by repeatedly finding any inversion, flipping it to the front then flipping the inversion and flipping everything back to its old position. And that is equivalent to swapping the inversion so I don't need to reverse (which is awkward on strings since it would reverse the digits of the values converting e.g. <code>12</code> to <code>21</code>)</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, <s>72</s> 71 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, <s>72</s> 71 bytes</h1>
 
 
 
@@ -82,7 +90,7 @@ h e=e
 
 <p><em>Edit: -1 byte thanks to <a href="https://codegolf.stackexchange.com/users/48198/bmo">BMO</a></em></p>
 </div>
-<div id="pu3" class="pu"><p><strong>C# - 229</strong></p>
+<div id="pu4" class="pu"><p><strong>C# - 229</strong></p>
 
 <pre><code>using System;using System.Linq;class P{static void Main(string[] a){
 var n=a.ToList();Action&lt;int&gt;d=z=&gt;{Console.Write(z+" ");n.Reverse(0,z);};
@@ -106,7 +114,7 @@ class P {
 }
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h2>GolfScript, 34 / 21 chars</h2>
+<div id="pu5" class="pu"><h2>GolfScript, 34 / 21 chars</h2>
 
 <p>(Thanks @PeterTaylor for chopping 4 chars off)</p>
 
@@ -161,7 +169,7 @@ class P {
 while d:n=d.index(max(d));d.pop(n);print n+i,n-~i,;i+=1
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h2>Python, <strike>91</strike> 90 chars</h2>
+<div id="pu6" class="pu"><h2>Python, <strike>91</strike> 90 chars</h2>
 
 <pre><code>L=map(int,raw_input().split())
 while L:i=L.index(max(L));print-~i,len(L),;L=L[:i:-1]+L[:i]
@@ -171,7 +179,7 @@ while L:i=L.index(max(L));print-~i,len(L),;L=L[:i:-1]+L[:i]
 
 <p><code>i</code> is the index of the biggest pancake.  <code>L=L[:i:-1]+L[:i]</code> flips <code>i+1</code> pancakes, flips <code>len(L)</code> pancakes, then drops the last pancake.</p>
 </div>
-<div id="pu6" class="pu"><h2>Perl, <s>103</s> 100 characters</h2>
+<div id="pu7" class="pu"><h2>Perl, <s>103</s> 100 characters</h2>
 
 <p>Expects input on the command line.</p>
 
@@ -183,7 +191,7 @@ while L:i=L.index(max(L));print-~i,len(L),;L=L[:i:-1]+L[:i]
 
 <p>The logic is kind of interesting. It starts by cataloguing the index of each item, were it in sorted order. It then iterates through this catalog from right to left. So applying a flip involves adjusting indexes below the cutoff value, instead of actually moving values around. After some finagling I also managed to save a few characters by doing both flips per iteration simultaneously.</p>
 </div>
-<div id="pu7" class="pu"><h3>GolfScript, <strike>31</strike> 29 characters</h3>
+<div id="pu8" class="pu"><h3>GolfScript, <strike>31</strike> 29 characters</h3>
 <pre><code>~].${1$?).p.2$.,p&gt;-1%\@&lt;+)}%,
 </code></pre>
 <p>Another GolfScript solution, can also be tested <a href="http://golfscript.apphb.com/?c=OyIzIDQgMSAyIgoKfl0uJHsxJD8pLnAuMiQuLHA%2BLTElXEA8Kyl9JSw%3D&amp;run=true" rel="noreferrer">online</a>.</p>
@@ -208,7 +216,7 @@ while L:i=L.index(max(L));print-~i,len(L),;L=L[:i:-1]+L[:i]
 }/
 </code></pre>
 </div>
-<div id="pu8" class="pu"><h2>Ruby 1.9 - <strike>109</strike> <strike>88</strike> 79 characters</h2>
+<div id="pu9" class="pu"><h2>Ruby 1.9 - <strike>109</strike> <strike>88</strike> 79 characters</h2>
 
 <p>Much more compact version based on Keith's great python solution:</p>
 
@@ -236,7 +244,7 @@ a.size.downto(2){|l|[a.index(a[0,l].max)+1,l].map{|v|p v;a[0,v]=a[0,v].reverse}}
 2
 </code></pre>
 </div>
-<div id="pu9" class="pu"><h2>Python - 282 characters</h2>
+<div id="pu10" class="pu"><h2>Python - 282 characters</h2>
 
 <pre><code>import sys
 s=sys.argv[1]
@@ -330,7 +338,7 @@ print pancakesAr
   <p>The simplest pancake sorting algorithm requires at most 2n−3 flips. In this algorithm, a variation of selection sort, we bring the largest pancake not yet sorted to the top with one flip, and then take it down to its final position with one more, then repeat this for the remaining pancakes.</p>
 </blockquote>
 </div>
-<div id="pu10" class="pu"><p><strong>Python2: 120</strong></p>
+<div id="pu11" class="pu"><p><strong>Python2: 120</strong></p>
 
 <pre><code>L=map(int,raw_input().split())
 u=len(L)
@@ -354,7 +362,7 @@ If you want to obtain an output like:</p>
 
 <p>Simply add a comma in the <code>print</code> statement.</p>
 </div>
-<div id="pu11" class="pu"><h2>Python 2 (254)</h2>
+<div id="pu12" class="pu"><h2>Python 2 (254)</h2>
 
 <p>Simple BFS-search, some stuff is inlined, probably could be compressed more without changing the search style. Hopefully this shows maybe how to start golfing a bit (too much to be in a simple comment).</p>
 
