--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240704T201804Z
+"   /golfscore                                      20240704T203314Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/273927.html">Minimum number of select-all/copy/paste steps fo: 0273927</a>
 <a href="q/12028.html">Flipping pancakes                               : 0012028</a>
 <a href="q/273875.html">Segments of a string doubling in length         : 0273875</a>
 <a href="q/258704.html">Custom Games of Life                            : 0258704</a>
