--- a/q/273927.html
+++ b/q/273927.html
@@ -26,9 +26,15 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>098</td><td>JavaScript ES6</td><td>240704T203314Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273928#273928">Arnauld</a></td></tr>
+<tr d-ix="0"><td>071</td><td>Arturo</td><td>240704T210655Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273929#273929">chunes</a></td></tr>
+<tr d-ix="1"><td>098</td><td>JavaScript ES6</td><td>240704T203314Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273928#273928">Arnauld</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), 98 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 71 bytes</h1>
+<pre><code>$-&gt;n-&gt;min map[1 1 3 2 7 6 4 3 8 9 12 27 16 81 6 5]=&gt;[&amp;+5*ceil log//n&amp;4]
+</code></pre>
+<p><a href="http://arturo-lang.io/playground?LhjFmP" rel="nofollow noreferrer">Try it!</a></p>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (ES6), 98 bytes</h1>
 <p>Basically a direct implementation of the formula given in the challenge.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>with(Math)f=n=&gt;min(...[81,27,9,6,5,3,2,1].map((v,i)=&gt;ceil(log(n/v)/log(4))*5-~(37115839&gt;&gt;i*4&amp;15)))
