--- a/q/273927.html
+++ b/q/273927.html
@@ -37,6 +37,7 @@
 <p><a href="https://tio.run/##K6gsycjPM7YoKPr/P802JzE3KSVRIc8qz84wMS9FITczT0O3LlM7TSNPP1MzLb9IIVMhMy/aSMdYx0THNFbzP0goDyikUJSYl56qYahjbKxpxcVZUJSZV6KRpwPUp6n5HwA" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 <p>Doesn't bother with the formula. Instead, implements the <a href="https://math.stackexchange.com/a/4939642/24654">characterization from the math SE post</a> where each step creates 2, 3, 4, or 5 copies of the strings for that many operations plus one.</p>
 <p>The outputs don't match the formula-derived test cases on powers of 4, but as Bubbler points out, this is due to a typo in the formula in the math SE post.</p>
+<p>We can save 1 byte by writing the bytestring <code>b&quot;&quot;</code> for <code>[2,3,4,5]</code>,</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 71 bytes</h1>
 <pre><code>$-&gt;n-&gt;min map[1 1 3 2 7 6 4 3 8 9 12 27 16 81 6 5]=&gt;[&amp;+5*ceil log//n&amp;4]
