--- a/q/273927.html
+++ b/q/273927.html
@@ -32,9 +32,9 @@
 </table>
 <div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 48 bytes</h1>
 
-<pre class="lang-python prettyprint-override"><code>f=lambda n:n&gt;1and-max(~i-f(n/i)for i in b"&#2;&#3;&#4;&#5;")
+<pre class="lang-python prettyprint-override"><code>f=lambda n:n&gt;1and-~min(i+f(n/i)for i in b"&#2;&#3;&#4;&#5;")
 </code></pre>
-<p><a href="https://tio.run/##K6gsycjPM7YoKPr/P802JzE3KSVRIc8qz84wMS9FNzexQqMuUzdNI08/UzMtv0ghUyEzTyFJiYmZhVVJ8z9IJA8kUpSYl56qYahjbKxpxcVZUJSZV6KRpwPUpqn5HwA" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##Fcu9CoAgFAZQ6Geop5AmLxURLhHUuyhmXagvkZaWXt1qPXD8fW0n1OBDjG7a9WGsFhgx9xq2fQ6G5NpJdEzuDIIFQ5gqSbO8ovgLfgka6yL7Rikay8IHxiXRfI0ovg" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 <p><strong>50 bytes</strong></p>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda n:n&gt;1and min(i+1+f(n/i)for i in[2,3,4,5])
