--- a/q/273927.html
+++ b/q/273927.html
@@ -26,29 +26,36 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>071</td><td>Arturo</td><td>240704T210655Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273929#273929">chunes</a></td></tr>
-<tr d-ix="1"><td>098</td><td>JavaScript ES6</td><td>240704T203314Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273928#273928">Arnauld</a></td></tr>
-<tr d-ix="2"><td>068</td><td>Google Sheets</td><td>240705T041809Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273932#273932">z..</a></td></tr>
-<tr d-ix="3"><td>041</td><td>Picat</td><td>240705T022349Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273931#273931">Bubbler</a></td></tr>
-<tr d-ix="4"><td>048</td><td>Python 3</td><td>240704T235711Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273930#273930">xnor</a></td></tr>
+<tr d-ix="0"><td>015</td><td>Japt</td><td>240705T080224Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273933#273933">Shaggy</a></td></tr>
+<tr d-ix="1"><td>071</td><td>Arturo</td><td>240704T210655Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273929#273929">chunes</a></td></tr>
+<tr d-ix="2"><td>098</td><td>JavaScript ES6</td><td>240704T203314Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273928#273928">Arnauld</a></td></tr>
+<tr d-ix="3"><td>068</td><td>Google Sheets</td><td>240705T041809Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273932#273932">z..</a></td></tr>
+<tr d-ix="4"><td>041</td><td>Picat</td><td>240705T022349Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273931#273931">Bubbler</a></td></tr>
+<tr d-ix="5"><td>048</td><td>Python 3</td><td>240704T235711Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273930#273930">xnor</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 71 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 15 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<p>Port of xnor's 2nd Python solution.</p>
+<pre><code>f ©5ò2ÈÒßU/XÃrm
+</code></pre>
+<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=ZiCpNfIyyNLfVS9Yw3Jt&amp;input=MzI" rel="nofollow noreferrer">Try it</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 71 bytes</h1>
 <pre><code>$-&gt;n-&gt;min map[0 1 3 2 7 6 4 3 8 9 12 27 16 81 6 5]=&gt;[&amp;+5*ceil log//n&amp;4]
 </code></pre>
 <p><a href="http://arturo-lang.io/playground?PQK9Cx" rel="nofollow noreferrer">Try it!</a></p>
 </div>
-<div id="pu1" class="pu"><h1>JavaScript (ES6), 98 bytes</h1>
+<div id="pu2" class="pu"><h1>JavaScript (ES6), 98 bytes</h1>
 <p>Basically a direct implementation of the (fixed) formula given in the challenge.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>with(Math)f=n=&gt;min(...[81,27,9,6,5,3,2,1].map((v,i)=&gt;ceil(log(n/v)/log(4))*5-~(37115838&gt;&gt;i*4&amp;15)))
 </code></pre>
 <p><a href="https://tio.run/##ZdJBboMwEEDRfU/BqrIjB5ixxzYLuEFPUHWBaNI4IhA1iO56dVqqENzBK0vP8pfGPtdjfWs@w3XYd/37YZq@wnASL/VwkseyK6tL6ESapq8eFDpVKKtIaYUK3tJLfRViVEGWVXMIrWj7D9Flo8zmjZFyR/tvoR0Aee2rKuzMM5CUcmr67ta3h3Q@dxSQ/C0pkyxL8qf/iDFqhiZGYuhj9AzBRgg8qjFWXrUmVp4F9JHyLpJdFXmXACPlXcjRrMq7mBu/Ku@avLDrGHnXQ4GrbrpWe/NQ2szKWf9Q3rVE2i5qeBc05A4X5V20CMYsyruEBr1fdPO@v9MgZ@8/Y/Op8sIB4V23c57XcjNOPw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1>Google Sheets, 68 bytes</h1>
+<div id="pu3" class="pu"><h1>Google Sheets, 68 bytes</h1>
 <pre class="lang-cpp prettyprint-override"><code>=SORTN(5*CEILING(LOG(A1/{1;2;6;3;9;27;81;5},4))+{1;3;7;4;8;12;16;6}) 
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="http://picat-lang.org" rel="nofollow noreferrer">Picat</a>, 41 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="http://picat-lang.org" rel="nofollow noreferrer">Picat</a>, 41 bytes</h1>
 <pre><code>f(1)=0.
 f(N)=[f(N/&gt;I)+I+1:I in 2..5].min.
 </code></pre>
@@ -56,7 +63,7 @@ f(N)=[f(N/&gt;I)+I+1:I in 2..5].min.
 <p>Same approach as <a href="https://codegolf.stackexchange.com/a/273930/78410">xnor's Python answer</a>: recurses through the cases of <code>ctrl+A C V{1,4}</code> to get at least N characters as a result.</p>
 <p>With the help of <code>table</code> in the header section, it computes all test cases almost instantly. Thanks to the <code>/&gt;</code> operator which does ceil-ed integer division, all intermediate arguments are integers without any complications, and we can simply pattern-match the 1 as the base case.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 48 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 48 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda n:n&gt;1and-~min(i+f(n/i)for i in b"&#2;&#3;&#4;&#5;")
 </code></pre>
