--- a/q/273927.html
+++ b/q/273927.html
@@ -26,18 +26,31 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>023</td><td>05AB1E</td><td>240705T084446Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273934#273934">Kevin Cr</a></td></tr>
-<tr d-ix="1"><td>041</td><td>Picat</td><td>240705T022349Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273931#273931">Bubbler</a></td></tr>
-<tr d-ix="2"><td>015</td><td>Japt</td><td>240705T080224Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273933#273933">Shaggy</a></td></tr>
-<tr d-ix="3"><td>071</td><td>Arturo</td><td>240704T210655Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273929#273929">chunes</a></td></tr>
+<tr d-ix="0"><td>049</td><td>Arturo</td><td>240704T210655Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273929#273929">chunes</a></td></tr>
+<tr d-ix="1"><td>023</td><td>05AB1E</td><td>240705T084446Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273934#273934">Kevin Cr</a></td></tr>
+<tr d-ix="2"><td>041</td><td>Picat</td><td>240705T022349Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273931#273931">Bubbler</a></td></tr>
+<tr d-ix="3"><td>015</td><td>Japt</td><td>240705T080224Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273933#273933">Shaggy</a></td></tr>
 <tr d-ix="4"><td>098</td><td>JavaScript ES6</td><td>240704T203314Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273928#273928">Arnauld</a></td></tr>
 <tr d-ix="5"><td>068</td><td>Google Sheets</td><td>240705T041809Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273932#273932">z..</a></td></tr>
 <tr d-ix="6"><td>048</td><td>Python 3</td><td>240704T235711Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273930#273930">xnor</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 23 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 49 bytes</h1>
+<pre class="lang-arturo prettyprint-override"><code>f:$-&gt;n-&gt;(n&gt;1)?[map[2,3,4,5]=&gt;[+1+f//n&lt;=&amp;]|min]-&gt;0
+</code></pre>
+<p><a href="http://arturo-lang.io/playground?ppSqyO" rel="nofollow noreferrer">Try it!</a></p>
+<p>Port of xnor's 50-byte <a href="https://codegolf.stackexchange.com/a/273930/97916">Python answer</a>.</p>
+<hr />
+<h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 71 bytes</h1>
+<pre><code>$-&gt;n-&gt;min map[0 1 3 2 7 6 4 3 8 9 12 27 16 81 6 5]=&gt;[&amp;+5*ceil log//n&amp;4]
+</code></pre>
+<p><a href="http://arturo-lang.io/playground?PQK9Cx" rel="nofollow noreferrer">Try it!</a></p>
+<p>The formula in the OP.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 23 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>&quot;D1›Di4L+DŠ/®δ.V+&gt;ß&quot;©.V
 </code></pre>
-<p>Port of <a href="https://codegolf.stackexchange.com/a/273930/52210"><em>@xnor</em>'s Python answer</a>, so make sure to upvote that answer as well.</p>
+<p>Port of <a href="https://codegolf.stackexchange.com/a/273930/52210"><em>@xnor</em>'s Python answer</a>, so make sure to upvote that answer as well.<br />
+Still pretty long, since 05AB1E is very verbose for recursive functions.</p>
 <p><a href="https://tio.run/##ASoA1f9vc2FiaWX//yJEMeKAukRpNEwrRMWgL8KuzrQuVis@w58iwqkuVv//NjQ" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##AUcAuP9vc2FiaWX/MzLDnTYgMjHFuG/CqzXCsMKqdnk/IiDihpIgIj95/yJEMeKAukRpNEwrRMWgL8KuzrQuVis@w58iwqkuVv8s/w" rel="nofollow noreferrer">verify most test cases</a> (it'll time out before it has output all test cases).</p>
 <p>Using the given formula would be <strong>32 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></strong> instead:</p>
 <pre><code>•¬òÃ,v₅aw°Üÿ∊•82в2ôε`Š/4.nî5*+}ß
@@ -93,7 +106,7 @@ D                 # Duplicate the current value n
 </code></pre>
 <p><a href="https://codegolf.stackexchange.com/a/166851/52210">See this 05AB1E tip of mine (sections <em>How to compress large integers?</em> and <em>How to compress integer lists?</em>)</a> to understand why <code>•¬òÃ,v₅aw°Üÿ∊•</code> is <code>50972899172091152076282460330 </code> and <code>•¬òÃ,v₅aw°Üÿ∊•82в</code> is <code>[1,0,2,3,3,4,5,6,6,7,9,8,27,12,81,16]</code>.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="http://picat-lang.org" rel="nofollow noreferrer">Picat</a>, 41 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="http://picat-lang.org" rel="nofollow noreferrer">Picat</a>, 41 bytes</h1>
 <pre><code>f(1)=0.
 f(N)=[f(N/&gt;I)+I+1:I in 2..5].min.
 </code></pre>
@@ -102,16 +115,11 @@ f(N)=[f(N/&gt;I)+I+1:I in 2..5].min.
 <p>With the help of <code>table</code> in the header section, it computes all test cases almost instantly. Thanks to the <code>/&gt;</code> operator which does ceil-ed integer division, all intermediate arguments are integers without any complications, and we can simply pattern-match the 1 as the base case.</p>
 <p>Bitwise not operator <code>~</code> exists in Picat, but it doesn't like putting the two symbols <code>-~</code> side-by-side, so the usual <code>-~</code> trick does not save any bytes.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 15 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 15 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <p>Port of xnor's 50 byte Python solution.</p>
 <pre><code>f ©5ò2ÈÒßU/XÃrm
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=ZiCpNfIyyNLfVS9Yw3Jt&amp;input=MzI" rel="nofollow noreferrer">Try it</a></p>
-</div>
-<div id="pu3" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 71 bytes</h1>
-<pre><code>$-&gt;n-&gt;min map[0 1 3 2 7 6 4 3 8 9 12 27 16 81 6 5]=&gt;[&amp;+5*ceil log//n&amp;4]
-</code></pre>
-<p><a href="http://arturo-lang.io/playground?PQK9Cx" rel="nofollow noreferrer">Try it!</a></p>
 </div>
 <div id="pu4" class="pu"><h1>JavaScript (ES6), 98 bytes</h1>
 <p>Basically a direct implementation of the (fixed) formula given in the challenge.</p>
