--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240705T093913Z
+"   /golfscore                                      20240705T100205Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/66197.html">Is it a pangram?                                : 0066197</a>
+<a href="q/156170.html">Split string on first occurrence of each charact: 0156170</a>
 <a href="q/273875.html">Segments of a string doubling in length         : 0273875</a>
 <a href="q/273927.html">Minimum number of select-all/copy/paste steps fo: 0273927</a>
 <a href="q/273783.html">Binary Slashes Display                          : 0273783</a>
