--- a/q/17305.html
+++ b/q/17305.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>031</td><td>Uiua</td><td>240705T125210Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/273942#273942">Joao-3</a></td></tr>
-<tr d-ix="1"><td>109</td><td>Zsh</td><td>240702T124858Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/273868#273868">roblogic</a></td></tr>
-<tr d-ix="2"><td>025</td><td>Perl 5 + plF M5.10.0</td><td>180806T120712Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/170065#170065">Dom Hast</a></td></tr>
+<tr d-ix="0"><td>022</td><td>Perl 5 + plF M5.10.0</td><td>180806T120712Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/170065#170065">Dom Hast</a></td></tr>
+<tr d-ix="1"><td>031</td><td>Uiua</td><td>240705T125210Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/273942#273942">Joao-3</a></td></tr>
+<tr d-ix="2"><td>109</td><td>Zsh</td><td>240702T124858Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/273868#273868">roblogic</a></td></tr>
 <tr d-ix="3"><td>088</td><td>Ruby</td><td>140106T134244Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/17761#17761">manatwor</a></td></tr>
 <tr d-ix="4"><td>097</td><td>R</td><td>240701T094454Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/273853#273853">int 21h </a></td></tr>
 <tr d-ix="5"><td>005</td><td>MATL</td><td>180731T131723Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/169640#169640">Sundar R</a></td></tr>
@@ -76,12 +76,20 @@
 <tr d-ix="47"><td>278</td><td>C</td><td>140103T154137Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/17325#17325">wjl</a></td></tr>
 <tr d-ix="48"><td>nan</td><td></td><td>140103T134038Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/17311#17311">marinus</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.uiua.org" rel="nofollow noreferrer">Uiua</a>, 31 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> + <code>-plF -M5.10.0</code>, 22 bytes</h1>
+<p>Utilises ANSI escape sequences and unprintables.</p>
+
+<pre class="lang-perl prettyprint-override"><code>$"="..";$_=".[1;$.H@F"</code></pre>
+<p><a href="https://dom111.github.io/code-sandbox/#eyJsYW5nIjoid2VicGVybC01LjI4LjEiLCJjb2RlIjoiJFwiPVwiXHUwMDBiXGJcIjskXz1cIlx1MDAxYlsxOyQuSEBGXCIiLCJhcmdzIjoiLXBsRlxuLU01LjEwLjAiLCJpbnB1dCI6IkkgYW0gYSB0ZXh0LlxuVHJhbnNwb3NlIG1lLlxuQ2FuIHlvdSBkbyBpdD8ifQ==" rel="nofollow noreferrer">Try it online!</a></p>
+<h2>Explanation</h2>
+<p>This code first changes the <a href="https://perldoc.perl.org/perlvar.html#%24LIST_SEPARATOR" rel="nofollow noreferrer">list separator (<code>$&quot;</code>)</a> value to be a form-feed and a backspace, then we set the implicitly printed variable <code>$_</code> to be a string that starts with the ANSI escape sequence for 'start printing at line 1 column <code>$.</code> (where <code>$.</code> is the current line of text: <code>\x1b1;$.H</code>) and interpolates the list <code>@F</code> (which is a list of all the characters on that line, populated  by autosplit (<code>-a</code>, implied by <code>-F</code>) with an empty split pattern (<code>-F</code>)) which places the contents of <code>$&quot;</code> in between each item, moving the cursor vertically down instead of continuing output after the previous character.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.uiua.org" rel="nofollow noreferrer">Uiua</a>, 31 bytes</h1>
 <pre><code>/$&quot;_\n_&quot;⍚⍜⇌(▽\↥≠@ .)⍉⬚@ ⊜∘≠@\n.
 </code></pre>
 <p><a href="https://uiua.org/pad?src=0_12_0-dev_1__ewogICQgSSBhbSBhIHRleHQuCiAgJCBUcmFuc3Bvc2UgbWUuCiAgJCBDYW4geW91IGRvIGl0PwoKICAkIEFCQwogICQgREUKICAkIEYKfQoKRiDihpAgLyQiX1xuXyLijZrijZzih4wo4pa9XOKGpeKJoEAgLinijYnirJpAIOKKnOKImOKJoEBcbi4K4o2aKOKIqSZwIiJGKQo=" rel="nofollow noreferrer">Try it in the pad!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, <sub><s>139</s> <s>110</s></sub> 109 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, <sub><s>139</s> <s>110</s></sub> 109 bytes</h1>
 <pre class="lang-sh prettyprint-override"><code>for i;n=$[$#i&gt;n?$#i:n];for i;A+=(${(r:n:)i})
 for k ({1..$n})w=`for j ({1..$#})printf ${A[j][k]}`&amp;&amp;&lt;&lt;&lt;${w//% }
 </code></pre>
@@ -90,14 +98,6 @@ for k ({1..$n})w=`for j ({1..$#})printf ${A[j][k]}`&amp;&amp;&lt;&lt;&lt;${w//% 
 <s><a href="https://tio.run/##LYzLCoMwFAX3fsVFU0kqKt36qIWuuu9OBAONNIpXiSm2lXx7qtjNgRmG852etqFssc2gQKaYk5J48ozFuglWzq7bIKdkoZcpSZg0zPeVGAXXQEoM17CCLXDBZXsPdDlFEUHD5rzeTPc3nmHpqCTqBkhbyoB24Ykdsap9P8syssxxfABjjeM04N6A98BBi7eO1u@74jiNwySgFxtfOcJneMFjAKkL1/4A" rel="nofollow noreferrer" title="Zsh – Try It Online">139b</a></s></sub></p>
 <p>Find the longest string length, <code>n</code>. Construct array <code>A</code> from the input 'lines', right-padding each to <code>n</code>. Take slices of <code>A</code> to transpose the input lines.</p>
 <p>Array slicing is conceptually simpler than the previous approach, but only saves 1 byte in the end!</p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> + <code>-plF -M5.10.0</code>, 25 bytes</h1>
-<p>Utilises ANSI escape sequences.</p>
-
-<pre class="lang-perl prettyprint-override"><code>$"="..[1D";$_=".[1;$.H@F"</code></pre>
-<p><a href="https://dom111.github.io/code-sandbox/#eyJsYW5nIjoid2VicGVybC01LjI4LjEiLCJjb2RlIjoiJFwiPVwiXHUwMDBiXHUwMDFiWzFEXCI7JF89XCJcdTAwMWJbMTskLkhARlwiIiwiYXJncyI6Ii1wbEZcbi1NNS4xMC4wIiwiaW5wdXQiOiJJIGFtIGEgdGV4dC5cblRyYW5zcG9zZSBtZS5cbkNhbiB5b3UgZG8gaXQ/In0=" rel="nofollow noreferrer">Try it online!</a></p>
-<h2>Explanation</h2>
-<p>This code first changes the <a href="https://perldoc.perl.org/perlvar.html#%24LIST_SEPARATOR" rel="nofollow noreferrer">list separator (<code>$&quot;</code>)</a> value to be a vertical tab, followed by the ANSI escape sequence for 'go backwards 1 column' (<code>\x1b[1D</code>), then we set the implicitly printed variable <code>$_</code> to be a string that starts with the ANSI escape sequence for 'start printing at line 1 column <code>$.</code> (where <code>$.</code> is the current line of text)' (<code>\x1b1;$.H</code>) and interpolates the list <code>@F</code> (which is a list of all the characters on that line, populated  by autosplit (<code>-a</code>) with an empty split pattern (<code>-F</code>)) which places the contents of <code>$&quot;</code> in between each item, moving the cursor vertically down instead of continuing output after the previous character.</p>
 </div>
 <div id="pu3" class="pu"><h1>Ruby: 88 characters</h1>
 <p>(Posted because it's shorter then the other Ruby solutions. Not checked whether my code introduces anything new compared to those. If you already posted a Ruby solution and you feel this is mostly a copy of yours, please comment and I will retire my answer.)</p>
