--- a/q/273783.html
+++ b/q/273783.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>116</td><td>Python 3.8 prerelease</td><td>240705T124844Z</td><td><a href="https://codegolf.stackexchange.com/questions/273783/binary-slashes-display/273941#273941">Jakque</a></td></tr>
+<tr d-ix="0"><td>120</td><td>Python 3.8 prerelease</td><td>240705T124844Z</td><td><a href="https://codegolf.stackexchange.com/questions/273783/binary-slashes-display/273941#273941">Jakque</a></td></tr>
 <tr d-ix="1"><td>076</td><td>GolfScript</td><td>240702T072612Z</td><td><a href="https://codegolf.stackexchange.com/questions/273783/binary-slashes-display/273863#273863">Twilight</a></td></tr>
 <tr d-ix="2"><td>088</td><td>Zsh</td><td>240628T022041Z</td><td><a href="https://codegolf.stackexchange.com/questions/273783/binary-slashes-display/273829#273829">GammaFun</a></td></tr>
 <tr d-ix="3"><td>102</td><td>JavaScript ES6</td><td>240625T130346Z</td><td><a href="https://codegolf.stackexchange.com/questions/273783/binary-slashes-display/273800#273800">Arnauld</a></td></tr>
@@ -36,15 +36,15 @@
 <tr d-ix="7"><td>017</td><td>Charcoal</td><td>240625T000710Z</td><td><a href="https://codegolf.stackexchange.com/questions/273783/binary-slashes-display/273784#273784">Neil</a></td></tr>
 <tr d-ix="8"><td>078</td><td>J</td><td>240625T032739Z</td><td><a href="https://codegolf.stackexchange.com/questions/273783/binary-slashes-display/273790#273790">Conor O&</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 116 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 120 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>def f(i):
  c=a,=[&quot;\n&quot;]
- while i:c[0]+=~i%2*&quot; \\/&quot;;c=[a+&quot;/ &quot;[i%2]+&quot;\\&quot;,a+&quot;\\ &quot;[i%2]+&quot; \\&quot;]+c;a+=&quot;  &quot;;i//=2
+ while i:c[0]+=&quot; \\&quot;+~i%2*&quot;/&quot;;c=[a+&quot;/\\&quot;[i%2:],~i%2*(a+&quot;\\ \\&quot;)]+c;a+=&quot;  &quot;[i%2:];i//=2
  print(*c)
 </code></pre>
-<p><a href="https://tio.run/##PcpBCsMgEEDRvacYBgIaA5aEQonMSdSF2EgGipUQCN306ibddPXh8etnX99letStteeSIUtWs4BEcSCHvmAQcKz8WoDn5G5B05e7sUfw3qBN5KJGA@guDBq9xyH@8pfrw6CTjZoQAC0bQ6OAunHZZZ9Uy/I@qXYC" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
-<p>Output with a leading newline, 1 trailing whitespace at the end of each line and with the least significant bit in the bottom left (LSB)</p>
+<p><a href="https://tio.run/##LctBCsMgEIXhvacYBgoaA5aEQlE8iboQG8lAsRICoZte3ZrS7ff@V9/7@irzvW6tPZYMmZPQDJKNo3XoCwYGx0rPBUgndw3SIniP8kOXaUCFJlkXJapurpMO42/h3bw/SxFkMvG8wb8wpJSdGNSNys6HJFrmt1m0Lw" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+<p>Output with a leading newline, some trailing whitespaces at the end of each line and with the least significant bit in the bottom left (LSB)</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="http://www.golfscript.com/golfscript/" rel="nofollow noreferrer">GolfScript</a>, <s>82</s> <s>81</s> 76 bytes</h1>
 <pre><code>{49='/\ \  \ \/ \ \ '10/=}%5/zip.3&lt;{' ':a+}%\3&gt;{a\+}%+zip.,,-1%{a*}%\]zip n*
