--- a/q/273875.html
+++ b/q/273875.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>061</td><td>Haskell</td><td>240705T151856Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273944#273944">DPD-</a></td></tr>
+<tr d-ix="0"><td>058</td><td>Haskell</td><td>240705T151856Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273944#273944">DPD-</a></td></tr>
 <tr d-ix="1"><td>nan</td><td></td><td>240705T093913Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273936#273936">Saurabh </a></td></tr>
 <tr d-ix="2"><td>037</td><td>Ruby</td><td>240703T091600Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273902#273902">int 21h </a></td></tr>
 <tr d-ix="3"><td>012</td><td>APL Dyalog Extended</td><td>240702T224208Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273876#273876">Ad&#225;</a></td></tr>
@@ -62,10 +62,10 @@
 <tr d-ix="33"><td>005</td><td>Jelly</td><td>240702T230349Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273880#273880">Jonathan</a></td></tr>
 <tr d-ix="34"><td>003</td><td>Vyxal</td><td>240702T224503Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273877#273877">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 61 bytes</h1>
-<pre class="lang-haskell prettyprint-override"><code>(takeWhile(/=&quot;&quot;)).evalState(mapM(state.splitAt)$(2^)&lt;$&gt;[0..])
+<div id="pu0" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, <s><a href="https://play.haskell.org/saved/kMH1lMjw" rel="nofollow noreferrer">61</a></s> 58 bytes</h1>
+<pre class="lang-haskell prettyprint-override"><code>(takeWhile(/=&quot;&quot;)).evalState(mapM(state.splitAt.(2^))[0..])
 </code></pre>
-<p><a href="https://play.haskell.org/saved/kMH1lMjw" rel="nofollow noreferrer">Try it online!</a></p>
+<p><a href="https://play.haskell.org/saved/rJGb9Uxq" rel="nofollow noreferrer">Try it online!</a></p>
 <p>It maps (with state) over the infinite sequence of powers of two. Each map step returns the first n characters of the string in the state and puts the remaining in the state. So giving as initial state the string and stop iterating when the result is the empty string, we obtain the result.</p>
 </div>
 <div id="pu1" class="pu"><p>Here's a short solution in Python for your problem:</p>
